--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "concurrently \"npm run server\" \"npm run server:auth\" \"ng serve\"",
     "build": "ng build",
     "test": "ng test",
-    "lint": "./node_modules/.bin/nx lint && ng lint",
+    "lint": "./node_modules/.bin/nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "server": "json-server server/db.json",
     "server:auth": "node server/server.js",
@@ -21,61 +21,65 @@
     "format": "./node_modules/.bin/nx format:write",
     "format:write": "./node_modules/.bin/nx format:write",
     "format:check": "./node_modules/.bin/nx format:check",
-    "update": "ng update @nrwl/schematics",
+    "update": "ng update @nrwl/workspace",
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
+    "help": "./node_modules/.bin/nx help",
+    "affected": "./node_modules/.bin/nx affected",
+    "nx": "nx"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
-    "@ngrx/effects": "7.0.0",
-    "@ngrx/router-store": "7.0.0",
-    "@ngrx/store": "7.0.0",
-    "@nrwl/nx": "7.3.0",
+    "@angular/animations": "^9.0.0-next.7",
+    "@angular/cdk": "^8.2.1",
+    "@angular/common": "^9.0.0-next.7",
+    "@angular/compiler": "^9.0.0-next.7",
+    "@angular/core": "^9.0.0-next.7",
+    "@angular/forms": "^9.0.0-next.7",
+    "@angular/material": "^8.2.1",
+    "@angular/platform-browser": "^9.0.0-next.7",
+    "@angular/platform-browser-dynamic": "^9.0.0-next.7",
+    "@angular/router": "^9.0.0-next.7",
+    "@ngrx/effects": "8.3.0",
+    "@ngrx/router-store": "8.3.0",
+    "@ngrx/store": "8.3.0",
+    "@nrwl/angular": "8.5.1",
+    "@nrwl/nx": "^7.8.7",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "jsonwebtoken": "^8.3.0",
-    "moment": "^2.22.2",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "7.2.1",
-    "@angular/compiler-cli": "^7.2.0",
-    "@angular/language-service": "^7.2.0",
-    "@ngrx/store-devtools": "7.0.0",
-    "@nrwl/schematics": "7.1.1",
+    "@angular-devkit/build-angular": "~0.803.5",
+    "@angular/cli": "8.3.5",
+    "@angular/compiler-cli": "^9.0.0-next.7",
+    "@angular/language-service": "^9.0.0-next.7",
+    "@ngrx/schematics": "8.3.0",
+    "@ngrx/store-devtools": "8.3.0",
+    "@nrwl/workspace": "8.5.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.0.1",
     "concurrently": "^4.0.1",
+    "dotenv": "6.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-marbles": "0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
     "json-server": "^0.14.0",
-    "karma": "~3.0.0",
+    "jsonwebtoken": "^8.3.0",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngrx-store-freeze": "0.2.4",
-    "prettier": "1.13.7",
+    "prettier": "1.15.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.5.3"
   }
 }
