--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,9 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "target": "es2015",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "baseUrl": ".",
     "paths": {
       "@env/*": [
@@ -31,10 +26,9 @@
       "@workshop/ui-toolbar": [
         "libs/ui-toolbar/src/index.ts"
       ]
-    }
+    },
+    "module": "esnext",
+    "rootDir": "."
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
